[package]
name = "dumpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["winnt"] }
crypto-hash = "0.3.4"
hex = "0.4.3"
log = "0.4"
simplelog = "0.10"