[package]
name = "dumpy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.60.0", features = ["Win32", "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation"]}
crypto-hash = "0.3.4"
hex = "0.4.3"
log = "0.4"
simplelog = "0.10"
colored = "2.0"
crossterm = "0.20.0"
xz2 = "0.1.7"
twoway = "0.2.2"

